tests/core/snapshots/test-scalars.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "date": "2023-03-08T12:45:26-05:00"
    }
  }
}
