tests/core/snapshots/test-scalars.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "any1": {
        "test": "abc"
      },
      "any2": "string-value"
    }
  }
}
