tests/core/snapshots/test-scalars.md_5.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bigInt1": 32147483647,
      "bigInt2": -32147483647
    }
  }
}
