tests/core/snapshots/test-scalars.md_6.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "uInt": 32147483647
    }
  }
}
