tests/core/snapshots/test-scalars.md_7.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "internal: invalid value for scalar \"PhoneNumber\", expected \"FieldValue::Value\"",
        "locations": [
          {
            "line": 1,
            "column": 3
          }
        ],
        "path": [
          "phone"
        ]
      }
    ]
  }
}
