tests/core/snapshots/test-scalars.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar AnyScalar

scalar Bytes

scalar Date

scalar Email

scalar PhoneNumber

type Query {
  any(value: AnyScalar!): AnyScalar
  bytes(value: Bytes): Bytes
  date(value: Date!): Date!
  email(value: Email!): Email!
  phone(value: PhoneNumber!): PhoneNumber!
  url(value: Url!): Url!
}

scalar Url

schema {
  query: Query
}
