tests/core/snapshots/test-scalars.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

scalar AnyScalar

type Query {
  any(value: AnyScalar!): AnyScalar @expr(body: "{{.args.value}}")
  bytes(value: Bytes): Bytes @expr(body: "{{.args.value}}")
  date(value: Date!): Date! @expr(body: "{{.args.value}}")
  email(value: Email!): Email! @expr(body: "{{.args.value}}")
  phone(value: PhoneNumber!): PhoneNumber! @expr(body: "{{.args.value}}")
  url(value: Url!): Url! @expr(body: "{{.args.value}}")
}
